# primerug

./: .gitignore  Cargo.toml  Config.h  Makefile  README.md  Stats.h  Tools.h  main.cpp
.claude/: rieminer_benchmarks.md  sieve_throughput_benchmarks.md  skills.md
docs/: computational-records-research.md
src/: Config.h  Stats.h  Tools.h  args.rs  config.rs  constellation.rs  gpu_client.rs  job.rs  main.cpp  main.rs  miner.rs  sieve.rs  stats.rs  tools.rs  work_queue.rs
